--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@vueuse/core": "^11.1.0",
     "@vueuse/integrations": "^11.1.0",
     "ant-design-vue": "^4.0.0-rc.6",
